k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devbook-ingress
  # annotations:
  #   nginx.ingress.kubernetes.io/use-regex: "true"
  #   nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: devbook.local
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: devbook-frontend
              port:
                number: 80
        - path: /api/
          pathType: ImplementationSpecific
          backend:
            service:
              name: devbook-backend
              port:
                number: 8080
